https://github.com/gbif/crawler/issues/83
initial commit with dependencies updated and most of the guava usage removed, validation apis were also replaced